--- a/Google/Code.js.tmpl
+++ b/Google/Code.js.tmpl
@@ -36,7 +36,7 @@ function uploadImagesToAzureStorage( imagesSubFolder, imagesFolderId){
         'x-ms-blob-type': 'BlockBlob'
       }
     };
-    let azureStorageUrl =`https://s146p01gitiscontent.blob.core.windows.net/content/${imagesSubFolder}/${file.getName()}?sp=racwdl&st=2021-03-01T13:59:29Z&se=2022-03-01T21:59:29Z&spr=https&sv=2020-02-10&sr=c&sig=${SIGNATURE}`
+    let azureStorageUrl =`https://s146p01gitiscontent.blob.core.windows.net/content/${imagesSubFolder}/${file.getName()}?sp=racwdl&st=2021-03-01T13:59:29Z&se=2022-03-01T21:59:29Z&spr=https&sv=2020-02-10&sr=c&sig={{environ( 'SAS' )}}`
     let response = UrlFetchApp.fetch(azureStorageUrl, options);
     Logger.log(response.getContentText());
   }
